--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-  background-color: powderblue;
+  background-color: blue;
 }
 h1 {
-  color: blue;
+  color: black;
 }
 p {
-  color: red;
+  color: black;
 }
